
PIG-3444: CONCAT with 2+ input parameters fail (lbendig via daijy)

PIG-3529: Upgrade HBase dependency from 0.95-SNAPSHOT to 0.96 (jarcec via daijy)

PIG-3117: A debug mode in which pig does not delete temporary files (ihadanny via cheolsoo)

PIG-3484: Make the size of pig.script property configurable (cheolsoo)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-3662: Static loadcaster in BinStorage can cause exception (lbendig via rohini)

PIG-3657: New partition filter extractor fails with NPE (cheolsoo)

PIG-3617: problem with temp file deletion in MAPREDUCE operator (nezihyigitbasi via cheolsoo)

PIG-3649: POPartialAgg incorrectly calculates size reduction when multiple values aggregated (tmwoodruff via daijy)

PIG-3650: Fix for PIG-3100 breaks column pruning (tmwoodruff via daijy)

PIG-3643: Nested Foreach with UDF and bincond is broken (cheolsoo)

PIG-3616: TestBuiltIn.testURIwithCurlyBrace() silently fails (lbendig via cheolsoo)

PIG-3608: ClassCastException when looking up a value from AvroMapWrapper using a Utf8 key (rding)

PIG-3639: TestRegisteredJarVisibility is broken in trunk (cheolsoo)

PIG-3640: Retain intermediate files for debugging purpose in batch mode (cheolsoo)

PIG-3609: ClassCastException when calling compareTo method on AvroBagWrapper (rding via cheolsoo)

PIG-3584: AvroStorage does not correctly translate arrays of strings (jadler via cheolsoo)

PIG-3633: AvroStorage tests are failing when running against Avro 1.7.5 (jarcec via cheolsoo)

PIG-3612: Storing schema does not work cross cluster with PigStorage and JsonStorage (rohini)

PIG-3607: PigRecordReader should report progress for each inputsplit processed (rohini)

PIG-3566: Cannot set useMatches of REGEX_EXTRACT_ALL and REGEX_EXTRACT (nezihyigitbasi via cheolsoo)

PIG-2132: [Piggybank] MIN and MAX functions should ignore nulls (rekhajoshm via cheolsoo)

PIG-3581: Incorrect scope resolution with nested foreach (aniket486)
